--- a/index.html
+++ b/index.html
@@ -43,226 +43,222 @@
   </div>
 </div>
 
-<section>
 	<div class="container">
-		<h3 class="text-center">Située à Shefford, Mini Excavation Daudelin offre les services d'excavation, terrassement et transport en vrac.  Contactez-nous maintenant, faites confiance à l'équipe Daudelin!</h3>
+		<p class="text-center lead">Située à Shefford, Mini Excavation Daudelin offre les services d'excavation, terrassement et transport en vrac.  Contactez-nous maintenant, faites confiance à l'équipe Daudelin!</p>
 		<br>
 		<hr style="border-color:#353535;">
-		<br>
-		<h1 class="text-uppercase" id="services">Services</h1>
-		<br>
-		<br>
 
-		<div class="row">
-			<div class="col-sm-4">
-				<h3 class="text-uppercase">Excavation</h3>
-				<br>
-				<p>Confiez-nous vos projets d'excavation en tout genre</p>
+		<section>
+			<h1 class="text-uppercase titre" id="services">Services</h1>
+			<div class="row">
+				<div class="col-sm-4">
+					<img src="images/thumbnail/pelle.jpg" class="img-responsive">
+					<h3>Excavation</h3>
+					<br>
+					<p>Confiez-nous vos projets d'excavation en tout genre</p>
+					<ul>
+						<li>Drainage</li>
+						<li>Tranchées de toutes sortes
+	     			<ul>
+		     			<li>conduit électrique</li>
+		     			<li>entrée d'eau</li>
+		     			<li>renvoie de drain français</li> 
+		     			<li>et plus</li>
+		     		</ul>
+		     		</li>
+					</ul>
+				</div>
+
+				<div class="col-sm-4">
+					<img src="images/thumbnail/terrassement.jpg" class="img-responsive">
+					<h3>Terrassement</h3>
+					<br>
+					<p>Nous pouvons réaliser vos projets de terrassement</p>
+					<ul>
+					 	<li>Muret de roches</li>
+		     		<li>Patio et trottoir en dalles</li>
+		     		<li>et plus</li>
+		     	</ul>
+				</div>
+
+				<div class="col-sm-4">
+					<img src="images/thumbnail/remorque.jpg" class="img-responsive">
+					<h3>Transport</h3>
+					<br>
+					<p>Transport en vrac de petites quantités de diverses marchandises telles que</p>
+					<ul>
+				    <li>Terre</li>
+				    <li>Pierres</li>
+				    <li>Paillis de cèdre</li> 
+				    <li>et plus</li>
+				  </ul>
+				</div>
+			</div>
+		</section>
+
+		<section>
+			<h1 class="text-uppercase titre" id="projets">Réalisations</h1>
+			<div class="row">
+				<div class="col-sm-3">
+					<a href="#">
+						<img src="images/projets/projet_01.jpg" class="img-responsive">
+					</a>
+				</div>
+				<div class="col-sm-3">
+					<a href="#" class="thumbnail">
+						<img src="images/projets/projet_02.jpg" class="img-responsive">
+					</a>
+				</div>
+				<div class="col-sm-3">
+					<a href="#" class="thumbnail">
+						<img src="images/projets/projet_03.jpg" class="img-responsive">
+					</a>
+				</div>
+				<div class="col-sm-3">
+					<a href="#" class="thumbnail">
+						<img src="images/projets/projet_04.jpg" class="img-responsive">
+					</a>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-sm-3">
+					<a href="#" class="thumbnail">
+						<img src="images/projets/projet_05.jpg" class="img-responsive">
+					</a>
+				</div>
+				<div class="col-sm-3">
+					<a href="#" class="thumbnail">
+						<img src="images/projets/projet_06.jpg" class="img-responsive">
+					</a>
+				</div>
+				<div class="col-sm-3">
+					<a href="#" class="thumbnail">
+						<img src="images/projets/projet_07.jpg" class="img-responsive">
+					</a>
+				</div>
+				<div class="col-sm-3">
+					<a href="#" class="thumbnail">
+						<img src="images/projets/projet_08.jpg" class="img-responsive">
+					</a>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-sm-3">
+					<a href="#" class="thumbnail">
+						<img src="images/projets/projet_09.jpg" class="img-responsive">
+					</a>
+				</div>
+				<div class="col-sm-3">
+					<a href="#" class="thumbnail">
+						<img src="images/projets/projet_10.jpg" class="img-responsive">
+					</a>
+				</div>
+				<div class="col-sm-3">
+					<a href="#" class="thumbnail">
+						<img src="images/projets/projet_11.jpg" class="img-responsive">
+					</a>
+				</div>
+				<div class="col-sm-3">
+					<a href="#" class="thumbnail">
+						<img src="images/projets/projet_12.jpg" class="img-responsive">
+					</a>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-sm-3">
+					<a href="#" class="thumbnail">
+						<img src="images/projets/projet_13.jpg" class="img-responsive">
+					</a>
+				</div>
+				<div class="col-sm-3">
+					<a href="#" class="thumbnail">
+						<img src="images/projets/projet_14.jpg" class="img-responsive">
+					</a>
+				</div>
+				<div class="col-sm-3">
+					<a href="#" class="thumbnail">
+						<img src="images/projets/projet_15.jpg" class="img-responsive">
+					</a>
+				</div>
+				<div class="col-sm-3">
+					<a href="#" class="thumbnail">
+						<img src="images/projets/projet_16.jpg" class="img-responsive">
+					</a>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-sm-3">
+					<a href="#" class="thumbnail">
+						<img src="images/projets/projet_17.jpg" class="img-responsive">
+					</a>
+				</div>
+				<div class="col-sm-9">
+				</div>
+			</div>
+
+		<section>
+			<h1 class="text-uppercase titre">Équipement</h1>
+			<p>Mini Excavation Daudelin dispose d'un équipement performant pour réaliser vos projets.</p>
 				<ul>
-					<li>Drainage</li>
-					<li>Tranchées de toutes sortes
-     			<ul>
-	     			<li>conduit électrique</li>
-	     			<li>entrée d'eau</li>
-	     			<li>renvoie de drain français</li> 
-	     			<li>et plus</li>
-	     		</ul>
-	     		</li>
+					<li>Mini pelle Kubota</li>
+					<li>Mini tracteur avec chargeur de grande capacité</li>
+					<li>Remorque inclinable</li>
 				</ul>
-			</div>
-
-			<div class="col-sm-4">
-				<h3 class="text-uppercase">Terrassement</h3>
 				<br>
-				<p>Nous pouvons réaliser vos projets de terrassement</p>
-				<ul>
-				 	<li>Muret de roches</li>
-	     		<li>Patio et trottoir en dalles</li>
-	     		<li>et plus</li>
-	     	</ul>
-			</div>
+				<div class="row">
+				 	<div class="col-sm-4">
+				 		<a href="#" data-toggle="modal" data-target="#myModal_01"> <img src="images/equipement/pelle.jpg" class="img-responsive" alt="pelle"></a>
+				 		<div id="myModal_01" class="modal fade" tabindex="-1" role="dialog">
+				  			<div class="modal-dialog">
+				    			<div class="modal-content">
+				        			<div class="modal-header">
+			        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+			      					</div>
+				        			<div class="modal-body">
+				            		<img src="images/equipement/pelle.jpg" class="img-responsive">
+				        			</div>
+				    			</div>
+				  			</div>
+						</div>
+				 	</div>
+				 	<div class="col-sm-4">
+				 		<a href="#" data-toggle="modal" data-target="#myModal_02"> <img src="images/equipement/tracteur.jpg" class="img-responsive" alt="tracteur"></a>
+				 		<div id="myModal_02" class="modal fade" tabindex="-1" role="dialog">
+				  			<div class="modal-dialog">
+				    			<div class="modal-content">
+				        			<div class="modal-header">
+			        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+			      					</div>
+				        			<div class="modal-body">
+				            		<img src="images/equipement/tracteur.jpg" class="img-responsive">
+				        			</div>
+				    			</div>
+				  			</div>
+						</div>
+				 	</div>
+				 	<div class="col-sm-4">
+				 		<a href="#" data-toggle="modal" data-target="#myModal_03"> <img src="images/equipement/remorque.jpg" class="img-responsive" alt="remorque"></a>
+				 		<div id="myModal_03" class="modal fade" tabindex="-1" role="dialog">
+				  		<div class="modal-dialog">
+				    		<div class="modal-content">
+				       		<div class="modal-header">
+			       				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+			     				</div>
+			      			<div class="modal-body">
+			           		<img src="images/equipement/remorque.jpg" class="img-responsive">
+			       			</div>
+			    			</div>
+				 			</div>
+						</div>
+				 	</div>
+			 </div>
+		</section>
 
-			<div class="col-sm-4">
-				<h3 class="text-uppercase">Transport</h3>
-				<br>
-				<p>Transport en vrac de petites quantités de diverses marchandises telles que</p>
-				<ul>
-			    <li>Terre</li>
-			    <li>Pierres</li>
-			    <li>Paillis de cèdre</li> 
-			    <li>et plus</li>
-			  </ul>
-			</div>
-		</div>
-
-		<br>
-		<h1 class="text-uppercase" id="projets">Réalisations</h1>
-		<br>
-		<br>
-
-		<div class="row">
-			<div class="col-sm-3">
-				<a href="#" class="thumbnail">
-					<img src="images/projets/projet_01.jpg" class="img-responsive">
-				</a>
-			</div>
-			<div class="col-sm-3">
-				<a href="#" class="thumbnail">
-					<img src="images/projets/projet_02.jpg" class="img-responsive">
-				</a>
-			</div>
-			<div class="col-sm-3">
-				<a href="#" class="thumbnail">
-					<img src="images/projets/projet_03.jpg" class="img-responsive">
-				</a>
-			</div>
-			<div class="col-sm-3">
-				<a href="#" class="thumbnail">
-					<img src="images/projets/projet_04.jpg" class="img-responsive">
-				</a>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-sm-3">
-				<a href="#" class="thumbnail">
-					<img src="images/projets/projet_05.jpg" class="img-responsive">
-				</a>
-			</div>
-			<div class="col-sm-3">
-				<a href="#" class="thumbnail">
-					<img src="images/projets/projet_06.jpg" class="img-responsive">
-				</a>
-			</div>
-			<div class="col-sm-3">
-				<a href="#" class="thumbnail">
-					<img src="images/projets/projet_07.jpg" class="img-responsive">
-				</a>
-			</div>
-			<div class="col-sm-3">
-				<a href="#" class="thumbnail">
-					<img src="images/projets/projet_08.jpg" class="img-responsive">
-				</a>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-sm-3">
-				<a href="#" class="thumbnail">
-					<img src="images/projets/projet_09.jpg" class="img-responsive">
-				</a>
-			</div>
-			<div class="col-sm-3">
-				<a href="#" class="thumbnail">
-					<img src="images/projets/projet_10.jpg" class="img-responsive">
-				</a>
-			</div>
-			<div class="col-sm-3">
-				<a href="#" class="thumbnail">
-					<img src="images/projets/projet_11.jpg" class="img-responsive">
-				</a>
-			</div>
-			<div class="col-sm-3">
-				<a href="#" class="thumbnail">
-					<img src="images/projets/projet_12.jpg" class="img-responsive">
-				</a>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-sm-3">
-				<a href="#" class="thumbnail">
-					<img src="images/projets/projet_13.jpg" class="img-responsive">
-				</a>
-			</div>
-			<div class="col-sm-3">
-				<a href="#" class="thumbnail">
-					<img src="images/projets/projet_14.jpg" class="img-responsive">
-				</a>
-			</div>
-			<div class="col-sm-3">
-				<a href="#" class="thumbnail">
-					<img src="images/projets/projet_15.jpg" class="img-responsive">
-				</a>
-			</div>
-			<div class="col-sm-3">
-				<a href="#" class="thumbnail">
-					<img src="images/projets/projet_16.jpg" class="img-responsive">
-				</a>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-sm-3">
-				<a href="#" class="thumbnail">
-					<img src="images/projets/projet_17.jpg" class="img-responsive">
-				</a>
-			</div>
-			<div class="col-sm-9">
-			</div>
-		</div>
 	</div>
-</section>
-
-<section>
-	<div class="container">
-		<br>
-		<h1 class="text-uppercase">Équipement</h1>
-		<br>
-		<br>
-		 <div class="row">
-		 	<div class="col-sm-4">
-		 		<a href="#" data-toggle="modal" data-target="#myModal_01"> <img src="images/equipement/equipement_01.jpg" class="img-responsive" alt="equipement_01"></a>
-		 		<div id="myModal_01" class="modal fade" tabindex="-1" role="dialog">
-		  			<div class="modal-dialog">
-		    			<div class="modal-content">
-		        			<div class="modal-header">
-	        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	      					</div>
-		        			<div class="modal-body">
-		            		<img src="images/equipement/equipement_01.jpg" class="img-responsive">
-		        			</div>
-		    			</div>
-		  			</div>
-				</div>
-		 	</div>
-		 	<div class="col-sm-4">
-		 		<a href="#" data-toggle="modal" data-target="#myModal_02"> <img src="images/equipement/equipement_01.jpg" class="img-responsive" alt="equipement_01"></a>
-		 		<div id="myModal_02" class="modal fade" tabindex="-1" role="dialog">
-		  			<div class="modal-dialog">
-		    			<div class="modal-content">
-		        			<div class="modal-header">
-	        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	      					</div>
-		        			<div class="modal-body">
-		            		<img src="images/equipement/equipement_01.jpg" class="img-responsive">
-		        			</div>
-		    			</div>
-		  			</div>
-				</div>
-		 	</div>
-		 	<div class="col-sm-4">
-		 		<a href="#" data-toggle="modal" data-target="#myModal_03"> <img src="images/equipement/equipement_01.jpg" class="img-responsive" alt="equipement_01"></a>
-		 		<div id="myModal_03" class="modal fade" tabindex="-1" role="dialog">
-		  			<div class="modal-dialog">
-		    			<div class="modal-content">
-		        			<div class="modal-header">
-	        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	      					</div>
-		        			<div class="modal-body">
-		            		<img src="images/equipement/equipement_01.jpg" class="img-responsive">
-		        			</div>
-		    			</div>
-		  			</div>
-				</div>
-		 	</div>
-		 </div>
-	</div>
-</section>
-
-<br>
-<br>
-<br>
 
 <footer class="myFooter">
 	<div class="container" id="contact">
@@ -285,6 +281,7 @@
 		          	450-558-8868<br>
 		          	85, rue Paquette, Shefford<br>
 		          	QC J2M 1X7<br>
+		          	<a href="mailto:francoisdaudelin@videotron.ca">francoisdaudelin@videotron.ca</a>
 		          </address>
 			</div>
 			<div class="col-md-4">
