--- a/index.html
+++ b/index.html
@@ -101,102 +101,121 @@
 			<div class="row">
 				<div class="col-sm-3">
 					<a href="#">
-						<img src="images/projets/projet_01.jpg" class="img-responsive">
+						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_01.jpg')">
+						</div>
 					</a>
 				</div>
+				
 				<div class="col-sm-3">
-					<a href="#" class="thumbnail">
-						<img src="images/projets/projet_02.jpg" class="img-responsive">
+					<a href="#">
+						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_02.jpg')">
+						</div>
 					</a>
 				</div>
-				<div class="col-sm-3">
-					<a href="#" class="thumbnail">
-						<img src="images/projets/projet_03.jpg" class="img-responsive">
-					</a>
-				</div>
-				<div class="col-sm-3">
-					<a href="#" class="thumbnail">
-						<img src="images/projets/projet_04.jpg" class="img-responsive">
-					</a>
-				</div>
-			</div>
 
-			<div class="row">
 				<div class="col-sm-3">
-					<a href="#" class="thumbnail">
-						<img src="images/projets/projet_05.jpg" class="img-responsive">
+					<a href="#">
+						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_03.jpg')">
+						</div>
 					</a>
 				</div>
-				<div class="col-sm-3">
-					<a href="#" class="thumbnail">
-						<img src="images/projets/projet_06.jpg" class="img-responsive">
-					</a>
-				</div>
-				<div class="col-sm-3">
-					<a href="#" class="thumbnail">
-						<img src="images/projets/projet_07.jpg" class="img-responsive">
-					</a>
-				</div>
-				<div class="col-sm-3">
-					<a href="#" class="thumbnail">
-						<img src="images/projets/projet_08.jpg" class="img-responsive">
-					</a>
-				</div>
-			</div>
 
-			<div class="row">
 				<div class="col-sm-3">
-					<a href="#" class="thumbnail">
-						<img src="images/projets/projet_09.jpg" class="img-responsive">
+					<a href="#">
+						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_04.jpg')">
+						</div>
 					</a>
 				</div>
-				<div class="col-sm-3">
-					<a href="#" class="thumbnail">
-						<img src="images/projets/projet_10.jpg" class="img-responsive">
-					</a>
-				</div>
-				<div class="col-sm-3">
-					<a href="#" class="thumbnail">
-						<img src="images/projets/projet_11.jpg" class="img-responsive">
-					</a>
-				</div>
-				<div class="col-sm-3">
-					<a href="#" class="thumbnail">
-						<img src="images/projets/projet_12.jpg" class="img-responsive">
-					</a>
-				</div>
-			</div>
 
-			<div class="row">
 				<div class="col-sm-3">
-					<a href="#" class="thumbnail">
-						<img src="images/projets/projet_13.jpg" class="img-responsive">
+					<a href="#">
+						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_05.jpg')">
+						</div>
 					</a>
 				</div>
-				<div class="col-sm-3">
-					<a href="#" class="thumbnail">
-						<img src="images/projets/projet_14.jpg" class="img-responsive">
-					</a>
-				</div>
-				<div class="col-sm-3">
-					<a href="#" class="thumbnail">
-						<img src="images/projets/projet_15.jpg" class="img-responsive">
-					</a>
-				</div>
-				<div class="col-sm-3">
-					<a href="#" class="thumbnail">
-						<img src="images/projets/projet_16.jpg" class="img-responsive">
-					</a>
-				</div>
-			</div>
 
-			<div class="row">
 				<div class="col-sm-3">
-					<a href="#" class="thumbnail">
-						<img src="images/projets/projet_17.jpg" class="img-responsive">
+					<a href="#">
+						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_06.jpg')">
+						</div>
 					</a>
 				</div>
-				<div class="col-sm-9">
+
+				<div class="col-sm-3">
+					<a href="#">
+						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_07.jpg')">
+						</div>
+					</a>
+				</div>
+
+				<div class="col-sm-3">
+					<a href="#">
+						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_08.jpg')">
+						</div>
+					</a>
+				</div>
+
+				<div class="col-sm-3">
+					<a href="#">
+						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_09.jpg')">
+						</div>
+					</a>
+				</div>
+
+				<div class="col-sm-3">
+					<a href="#">
+						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_10.jpg')">
+						</div>
+					</a>
+				</div>
+
+				<div class="col-sm-3">
+					<a href="#">
+						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_11.jpg')">
+						</div>
+					</a>
+				</div>
+
+				<div class="col-sm-3">
+					<a href="#">
+						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_12.jpg')">
+						</div>
+					</a>
+				</div>
+
+				<div class="col-sm-3">
+					<a href="#">
+						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_13.jpg')">
+						</div>
+					</a>
+				</div>
+
+				<div class="col-sm-3">
+					<a href="#">
+						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_14.jpg')">
+						</div>
+					</a>
+				</div>
+
+				<div class="col-sm-3">
+					<a href="#">
+						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_15.jpg')">
+						</div>
+					</a>
+				</div>
+
+				<div class="col-sm-3">
+					<a href="#">
+						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_16.jpg')">
+						</div>
+					</a>
+				</div>
+
+				<div class="col-sm-3">
+					<a href="#">
+						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_17.jpg')">
+						</div>
+					</a>
 				</div>
 			</div>
 
