--- a/index.html
+++ b/index.html
@@ -43,241 +43,218 @@
   </div>
 </div>
 
-	<div class="container">
-		<p class="text-center lead">Située à Shefford, Mini Excavation Daudelin offre les services d'excavation, terrassement et transport en vrac.  Contactez-nous maintenant, faites confiance à l'équipe Daudelin!</p>
-		<br>
-		<hr style="border-color:#353535;">
+<div class="container">
+	<p class="text-center lead">Située à Shefford, Mini Excavation Daudelin offre les services d'excavation, terrassement et transport en vrac.  Contactez-nous maintenant, faites confiance à l'équipe Daudelin!</p>
+	<br>
+	<hr style="border-color:#353535;">
 
-		<section>
-			<h1 class="text-uppercase titre" id="services">Services</h1>
-			<div class="row">
-				<div class="col-sm-4">
-					<img src="images/thumbnail/pelle.jpg" class="img-responsive">
-					<h3>Excavation</h3>
-					<br>
-					<p>Confiez-nous vos projets d'excavation en tout genre</p>
-					<ul>
-						<li>Drainage</li>
-						<li>Tranchées de toutes sortes
-	     			<ul>
-		     			<li>conduit électrique</li>
-		     			<li>entrée d'eau</li>
-		     			<li>renvoie de drain français</li> 
-		     			<li>et plus</li>
-		     		</ul>
-		     		</li>
-					</ul>
-				</div>
-
-				<div class="col-sm-4">
-					<img src="images/thumbnail/terrassement.jpg" class="img-responsive">
-					<h3>Terrassement</h3>
-					<br>
-					<p>Nous pouvons réaliser vos projets de terrassement</p>
-					<ul>
-					 	<li>Muret de roches</li>
-		     		<li>Patio et trottoir en dalles</li>
-		     		<li>et plus</li>
-		     	</ul>
-				</div>
-
-				<div class="col-sm-4">
-					<img src="images/thumbnail/remorque.jpg" class="img-responsive">
-					<h3>Transport</h3>
-					<br>
-					<p>Transport en vrac de petites quantités de diverses marchandises telles que</p>
-					<ul>
-				    <li>Terre</li>
-				    <li>Pierres</li>
-				    <li>Paillis de cèdre</li> 
-				    <li>et plus</li>
-				  </ul>
-				</div>
-			</div>
-		</section>
-
-		<section>
-			<h1 class="text-uppercase titre" id="projets">Réalisations</h1>
-			<div class="row">
-				<div class="col-sm-3">
-					<a href="#">
-						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_01.jpg')">
-						</div>
-					</a>
-				</div>
-				
-				<div class="col-sm-3">
-					<a href="#">
-						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_02.jpg')">
-						</div>
-					</a>
-				</div>
-
-				<div class="col-sm-3">
-					<a href="#">
-						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_03.jpg')">
-						</div>
-					</a>
-				</div>
-
-				<div class="col-sm-3">
-					<a href="#">
-						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_04.jpg')">
-						</div>
-					</a>
-				</div>
-
-				<div class="col-sm-3">
-					<a href="#">
-						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_05.jpg')">
-						</div>
-					</a>
-				</div>
-
-				<div class="col-sm-3">
-					<a href="#">
-						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_06.jpg')">
-						</div>
-					</a>
-				</div>
-
-				<div class="col-sm-3">
-					<a href="#">
-						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_07.jpg')">
-						</div>
-					</a>
-				</div>
-
-				<div class="col-sm-3">
-					<a href="#">
-						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_08.jpg')">
-						</div>
-					</a>
-				</div>
-
-				<div class="col-sm-3">
-					<a href="#">
-						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_09.jpg')">
-						</div>
-					</a>
-				</div>
-
-				<div class="col-sm-3">
-					<a href="#">
-						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_10.jpg')">
-						</div>
-					</a>
-				</div>
-
-				<div class="col-sm-3">
-					<a href="#">
-						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_11.jpg')">
-						</div>
-					</a>
-				</div>
-
-				<div class="col-sm-3">
-					<a href="#">
-						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_12.jpg')">
-						</div>
-					</a>
-				</div>
-
-				<div class="col-sm-3">
-					<a href="#">
-						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_13.jpg')">
-						</div>
-					</a>
-				</div>
-
-				<div class="col-sm-3">
-					<a href="#">
-						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_14.jpg')">
-						</div>
-					</a>
-				</div>
-
-				<div class="col-sm-3">
-					<a href="#">
-						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_15.jpg')">
-						</div>
-					</a>
-				</div>
-
-				<div class="col-sm-3">
-					<a href="#">
-						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_16.jpg')">
-						</div>
-					</a>
-				</div>
-
-				<div class="col-sm-3">
-					<a href="#">
-						<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_17.jpg')">
-						</div>
-					</a>
-				</div>
-			</div>
-
-		<section>
-			<h1 class="text-uppercase titre">Équipement</h1>
-			<p>Mini Excavation Daudelin dispose d'un équipement performant pour réaliser vos projets.</p>
-				<ul>
-					<li>Mini pelle Kubota</li>
-					<li>Mini tracteur avec chargeur de grande capacité</li>
-					<li>Remorque inclinable</li>
-				</ul>
+	<section>
+		<h1 class="text-uppercase title" id="services">Services</h1>
+		<div class="row">
+			<div class="col-sm-4">
+				<img src="images/thumbnail/pelle.jpg" class="img-responsive">
+				<h3>Excavation</h3>
 				<br>
-				<div class="row">
-				 	<div class="col-sm-4">
-				 		<a href="#" data-toggle="modal" data-target="#myModal_01"> <img src="images/equipement/pelle.jpg" class="img-responsive" alt="pelle"></a>
-				 		<div id="myModal_01" class="modal fade" tabindex="-1" role="dialog">
-				  			<div class="modal-dialog">
-				    			<div class="modal-content">
-				        			<div class="modal-header">
-			        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-			      					</div>
-				        			<div class="modal-body">
-				            		<img src="images/equipement/pelle.jpg" class="img-responsive">
-				        			</div>
-				    			</div>
-				  			</div>
-						</div>
-				 	</div>
-				 	<div class="col-sm-4">
-				 		<a href="#" data-toggle="modal" data-target="#myModal_02"> <img src="images/equipement/tracteur.jpg" class="img-responsive" alt="tracteur"></a>
-				 		<div id="myModal_02" class="modal fade" tabindex="-1" role="dialog">
-				  			<div class="modal-dialog">
-				    			<div class="modal-content">
-				        			<div class="modal-header">
-			        					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-			      					</div>
-				        			<div class="modal-body">
-				            		<img src="images/equipement/tracteur.jpg" class="img-responsive">
-				        			</div>
-				    			</div>
-				  			</div>
-						</div>
-				 	</div>
-				 	<div class="col-sm-4">
-				 		<a href="#" data-toggle="modal" data-target="#myModal_03"> <img src="images/equipement/remorque.jpg" class="img-responsive" alt="remorque"></a>
-				 		<div id="myModal_03" class="modal fade" tabindex="-1" role="dialog">
-				  		<div class="modal-dialog">
-				    		<div class="modal-content">
-				       		<div class="modal-header">
-			       				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-			     				</div>
-			      			<div class="modal-body">
-			           		<img src="images/equipement/remorque.jpg" class="img-responsive">
-			       			</div>
-			    			</div>
-				 			</div>
-						</div>
-				 	</div>
-			 </div>
-		</section>
+				<p>Confiez-nous vos projets d'excavation en tout genre</p>
+				<ul>
+					<li>Drainage</li>
+					<li>Tranchées de toutes sortes
+     			<ul>
+	     			<li>conduit électrique</li>
+	     			<li>entrée d'eau</li>
+	     			<li>renvoie de drain français</li> 
+	     			<li>et plus</li>
+	     		</ul>
+	     		</li>
+				</ul>
+			</div>
 
-	</div>
+			<div class="col-sm-4">
+				<img src="images/thumbnail/terrassement.jpg" class="img-responsive">
+				<h3>Terrassement</h3>
+				<br>
+				<p>Nous pouvons réaliser vos projets de terrassement</p>
+				<ul>
+				 	<li>Muret de roches</li>
+	     		<li>Patio et trottoir en dalles</li>
+	     		<li>et plus</li>
+	     	</ul>
+			</div>
+
+			<div class="col-sm-4">
+				<img src="images/thumbnail/remorque.jpg" class="img-responsive">
+				<h3>Transport</h3>
+				<br>
+				<p>Transport en vrac de petites quantités de diverses marchandises telles que</p>
+				<ul>
+			    <li>Terre</li>
+			    <li>Pierres</li>
+			    <li>Paillis de cèdre</li> 
+			    <li>et plus</li>
+			  </ul>
+			</div>
+		</div>
+	</section>
+
+	<section>
+		<h1 class="text-uppercase title" id="projets">Réalisations</h1>
+		<div class="row">
+			<div class="col-sm-3">
+				<a class="showModal" data-img="images/projets/projet_01.jpg">
+					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_01.jpg')">
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-sm-3">
+				<a class="showModal" data-img="images/projets/projet_02.jpg">
+					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_02.jpg')">
+					</div>
+				</a>
+			</div>
+
+			<div class="col-sm-3">
+				<a class="showModal" data-img="images/projets/projet_03.jpg">
+					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_03.jpg')">
+					</div>
+				</a>
+			</div>
+
+			<div class="col-sm-3">
+				<a class="showModal" data-img="images/projets/projet_04.jpg">
+					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_04.jpg')">
+					</div>
+				</a>
+			</div>
+
+			<div class="col-sm-3">
+				<a class="showModal" data-img="images/projets/projet_05.jpg">
+					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_05.jpg')">
+					</div>
+				</a>
+			</div>
+
+			<div class="col-sm-3">
+				<a class="showModal" data-img="images/projets/projet_06.jpg">
+					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_06.jpg')">
+					</div>
+				</a>
+			</div>
+
+			<div class="col-sm-3">
+				<a class="showModal" data-img="images/projets/projet_07.jpg">
+					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_07.jpg')">
+					</div>
+				</a>
+			</div>
+
+			<div class="col-sm-3">
+				<a class="showModal" data-img="images/projets/projet_08.jpg">
+					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_08.jpg')">
+					</div>
+				</a>
+			</div>
+
+			<div class="col-sm-3">
+				<a class="showModal" data-img="images/projets/projet_09.jpg">
+					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_09.jpg')">
+					</div>
+				</a>
+			</div>
+
+			<div class="col-sm-3">
+				<a class="showModal" data-img="images/projets/projet_10.jpg">
+					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_10.jpg')">
+					</div>
+				</a>
+			</div>
+
+			<div class="col-sm-3">
+				<a class="showModal" data-img="images/projets/projet_11.jpg">
+					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_11.jpg')">
+					</div>
+				</a>
+			</div>
+
+			<div class="col-sm-3">
+				<a class="showModal" data-img="images/projets/projet_12.jpg">
+					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_12.jpg')">
+					</div>
+				</a>
+			</div>
+
+			<div class="col-sm-3">
+				<a class="showModal" data-img="images/projets/projet_13.jpg">
+					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_13.jpg')">
+					</div>
+				</a>
+			</div>
+
+			<div class="col-sm-3">
+				<a class="showModal" data-img="images/projets/projet_14.jpg">
+					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_14.jpg')">
+					</div>
+				</a>
+			</div>
+
+			<div class="col-sm-3">
+				<a class="showModal" data-img="images/projets/projet_15.jpg">
+					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_15.jpg')">
+					</div>
+				</a>
+			</div>
+
+			<div class="col-sm-3">
+				<a class="showModal" data-img="images/projets/projet_16.jpg">
+					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_16.jpg')">
+					</div>
+				</a>
+			</div>
+
+			<div class="col-sm-3">
+				<a class="showModal" data-img="images/projets/projet_17.jpg">
+					<div class="bgimage thumbnail" style="background-image: url('images/projets/projet_17.jpg')">
+					</div>
+				</a>
+			</div>
+		</div>
+	</section>
+
+	<section>
+		<h1 class="text-uppercase title">Équipement</h1>
+		<p>Mini Excavation Daudelin dispose d'un équipement performant pour réaliser vos projets.</p>
+		<ul>
+			<li>Mini pelle Kubota</li>
+			<li>Mini tracteur avec chargeur de grande capacité</li>
+			<li>Remorque inclinable</li>
+		</ul>
+		<br>
+		<div class="row">
+		 	<div class="col-sm-4">
+		 		<a class="showModal" data-img="images/equipement/pelle.jpg"> <img src="images/equipement/pelle.jpg" class="img-responsive" alt="pelle"></a>
+		 	</div>
+		 	<div class="col-sm-4">
+		 		<a class="showModal" data-img="images/equipement/tracteur.jpg"> <img src="images/equipement/tracteur.jpg" class="img-responsive" alt="tracteur"></a>
+		 	</div>
+		 	<div class="col-sm-4">
+		 		<a class="showModal" data-img="images/equipement/remorque.jpg"> <img src="images/equipement/remorque.jpg" class="img-responsive" alt="remorque"></a>
+		 	</div>
+	 	</div>
+	</section>
+</div>
+
+<div id="theModal" class="modal fade" tabindex="-1" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+     	<div class="modal-header">
+      	<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    	</div>
+      <div class="modal-body">
+        <img src="" id="theModalImg" class="img-responsive center-block">
+      </div>
+    </div>
+  </div>
+</div>
 
 <footer class="myFooter">
 	<div class="container" id="contact">
@@ -332,5 +309,11 @@
 <script src="js/jquery-1.12.4.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/script.js"></script>
+<script>
+	$('.showModal').click(function() {
+  	$('#theModalImg').attr('src', $(this).data('img'));
+		$('#theModal').modal({show:true})
+	});
+</script>
 </body>
 </html>
